--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "jest-style-matchers": "^0.1.3",
     "lodash": "^4.17.21",
     "md5": "^2.3.0"
+  },
+  "dependencies": {
+    "inline-style-expand-shorthand": "^1.6.0"
   }
 }
